# hotfn-py

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  Makefile  README.md  release_doc.md  requirements.txt  setup.cfg  setup.py  tox.ini
hotfn/: errors.py  headers.py
hotfn/http/: errors.py  main.py  request.py  response.py  worker.py
hotfn/json/: request.py  response.py  worker.py
hotfn/tests/: data.py  test_http_request_parser.py  test_json_request_parser.py  test_request_parser.py
pipe/: Dockerfile  app.py  docker-app.py
pipe/hot/: docker-app.py  main.go  requirements.txt
samples/: http_requests.go
samples/cold/: app.py  func.yaml  requirements.txt
samples/hot/: Dockerfile  app.py  func.go  func.py  func.yaml  requirements.txt
samples/hot-json/: func.py
samples/hot/http/async-echo/: func.py
samples/hot/http/echo/: func.py  requirements.txt
samples/hot/http/response-writer/: func.py
