[metadata]
version=0.0.6
name = hotfn
summary = Library to provide HTTP over STDIN/STDOUT
description-file =
    README.md
author = Denis Makogon
author-email = lildee1991@gmail.com
home-page = https://github.com/denismakogon/hotfn-py
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    hotfn

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
